--- a/.gitignore
+++ b/.gitignore
@@ -11,9 +11,10 @@ ggsample09
 #
 .DS_Store
 build/
-DerivedData/
 *.xcodeproj/*
 !project.pbxproj
+*.xcuserdatad/
+DerivedData/
 #
 # for Windows
 #
